--- a/src/Components/Bio/Bio.css
+++ b/src/Components/Bio/Bio.css
@@ -4,10 +4,11 @@
     padding: 30px 0;
     border-top: solid white 3px;
     border-bottom: solid white 3px;
+    width: 100%;
 }
 
 .mainBioDiv {
-    width: 80vw;
+    width: 80%;
     height: fit-content;
     padding: 30px;
     border: solid goldenrod 3px;
