--- a/src/Components/Bio/Bio.css
+++ b/src/Components/Bio/Bio.css
@@ -19,12 +19,16 @@
     color: antiquewhite;
     font-size: 33px;
     max-width: 900px;
+    overflow: hidden;
 }
 
 .bioTitle {
     font-size: 40px;
     text-align: center;
 
+}
+.bioTitle > * {
+    word-wrap: break-word;
 }
 
 .bioText {
@@ -63,14 +67,14 @@
     }
 
     .bigLines {
-        font-size: 30px;
+        font-size: 27px;
     }
 
     .genres {
-        font-size: 30px;
+        font-size: 27px;
     }
 
     .bioText {
-        font-size: 22px;
+        font-size: 20px;
     }
 }
